信息验证实现国际化

--- a/src/main/resources/i18n/login_en_US.properties
+++ b/src/main/resources/i18n/login_en_US.properties
@@ -1,3 +1,7 @@
+Email.user.email=email error
+login_error=Username email:{0} or password:{1} error
+NotEmpty.user.email=Email not empty!
+NotEmpty.user.password=password is empty
 txt.email=email
 txt.Login=login in 
 txt.password=password
