--- a/src/main/resources/i18n/login.properties
+++ b/src/main/resources/i18n/login.properties
@@ -1,5 +1,9 @@
-txt.email=邮箱
-txt.Login=登录
-txt.password=密码
-txt.remember=记住我
-txt.welcome=欢迎假期十日游
+Email.user.email=\u90AE\u7BB1\u683C\u5F0F\u9519\u8BEF
+login_error=\u7528\u6237\u540D\u90AE\u7BB1:{0}\u6216\u8005\u5BC6\u7801\u9519\u8BEF:{1};
+NotEmpty.user.email=\u90AE\u7BB1\u5730\u5740\u5FC5\u987B\u8F93\u5165\uFF01
+NotEmpty.user.password=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A\uFF01
+txt.email=\u90AE\u7BB1
+txt.Login=\u767B\u5F55
+txt.password=\u5BC6\u7801
+txt.remember=\u8BB0\u4F4F\u6211
+txt.welcome=\u6B22\u8FCE\u5047\u671F\u5341\u65E5\u6E38
